[workspace]
resolver = "2"
members = [
    "crates/pinentry",
    "crates/keyring-prompter",
    "crates/polkit-agent",
    "crates/ui",
    "crates/theme",
    "crates/hardening",
]

[workspace.package]
# The single place the version lives; every crate uses `version.workspace =
# true`. To release: bump this, commit, then tag the matching `vX.Y.Z`.
version = "0.1.0"
license = "MPL-2.0"

