[package]
name = "keyring-prompter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hush-keyring-prompter"
path = "src/main.rs"

[dependencies]
dialog = { path = "../dialog" }
hardening = { path = "../hardening" }
crypto-bigint = "0.6"
sha2 = "0.10"
hkdf = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
rand = "0.8"
zeroize = "1"
serde_json = "1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
