[package]
name = "polkit-agent"
version.workspace = true
edition = "2021"
license.workspace = true

[[bin]]
name = "psst-polkit-agent"
path = "src/main.rs"

[dependencies]
ui = { path = "../ui" }
hardening = { path = "../hardening" }
zbus-polkit-agent = "0.4.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util"] }
zeroize = "1"
serde_json = "1"
