[package]
name = "ui"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
theme = { path = "../theme" }
gpui = { package = "gpui-ce", version = "0.3.3", default-features = false, features = ["font-kit", "wayland"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"
